deep_research.log
  File "/home/admin/openclaw/workspace/gene-capsule-study/real_research.py", line 644
    '''
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 652)
